--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# taskernet-collector
+.DS_Store
+*.json
+*.ini
+start.sh
+logs/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
