--- a/site/package.json
+++ b/site/package.json
@@ -18,9 +18,9 @@
     "@angular/platform-browser": "~9.1.9",
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
-    "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "algoliasearch": "^4.3.0",
     "bootstrap": "^4.4.0",
+    "ngx-infinite-scroll": "^9.0.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
@@ -43,5 +43,8 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~3.8.3"
+  },
+  "scarfSettings": {
+    "enabled": false
   }
 }
